# 2025-KU-ML-Team21

./: merge_boarding_alighting.py  preprocess.ipynb  pyproject.toml  train_regression_models.py
dataset/raw/: congestion_2023.csv  congestion_2024_1.csv  congestion_2024_2.csv  congestion_2024_4.csv  서울교통공사_1-8호선 지하철역 위경도 좌표정보.csv
dataset/use/: congestion_2023_long.csv  congestion_2023_long_line2_3.csv  congestion_2024_1_long.csv  congestion_2024_long.csv  congestion_2024_long_line2_3.csv  metro_station_location_2_3.csv  seoul_event_2411_2412.json
